--- a/src/styles/AddProperty.css
+++ b/src/styles/AddProperty.css
@@ -1,5 +1,9 @@
-.AddProperty {
-    border-color: rgb(60, 255, 0);
-    padding: 5rem;
-    
+.Add-Properties {
+        padding: 5rem, 5rem, 5rem, 5rem;
+        text-align: center;
+        background-color: lavender;
+        background-position: center;
+        border-radius: 8%;
+        border-spacing: 40%;
 }
+
